# top-python

./: 06.02.py  HW_11.py  HW_8.py  HW_9.py  README.md  README_weatherapp_example.md  abst.py  clases.py  data.json  dict.py  directory_structure.txt  files.py  info.docx  inheritance.py  lambda map filter.py  listGuide.py  main.go  main.py  ourFirst.py  point.py  site.txt  string re.py  strs.py  test.py  tuple.py
.md/: README_taskmanager_example.md
mytest/: .coverage  pyproject.toml
mytest/tests/: conftest.py  test_bad.py  test_example.py  test_fixtures.py
offline/: HW_10.py  clases.py  client.py  dict.py  employees.json  encapsulation.py  get.py  inheritance.py  lambda map filter.py  linkedList1.py  listGuide.py  main.py  myDeque.py  myJson.py  pickleT.py  point.py  post.py  server.py  set.py  sort2.py  sorting.py  string re.py  strs.py  test.html  test.py  testing.py  theory closure.py  udp.py
online/: 1.py  HW 1.py  HW 2.py  HW_2.py  MyLogger.py  MyLogging.py  bridge.py  builder.py  chain of responsibility.py  command.py  decorator.py  decorators.py  facade.py  factory.py  flyweight.py  importedF.py  interpreter.py  iterator.py  linkedlist.py  mvc.py  my_abstract_factory.py  my_mp_Process.py  ourFirst.py  outType.py  patterns.py  protocol.py  singleton.py  test.py  (+6 more)
tests/: .coverage  guide.txt  pyproject.toml  pz.txt  pz2.txt  pz3.txt
tests/app/: analyzer.py
tests/src/: capitalize.py  example.py
tests/tests/: conftest.py  test_analyzer.py  test_bad.py  test_capitalize.py  test_example.py  test_exeptions.py  test_fixtures.py  test_http.py  test_test_data.py
(+577 files in other folders)
